--- a/enjoytrip-front/index.html
+++ b/enjoytrip-front/index.html
@@ -5,9 +5,22 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+
+      <!-- bootstrap css -->
+      <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+
+    <!-- credits -->
+    <div class="text-center mt-4">
+        <p>
+            Enjoy Trip
+        </p>
+        <p>
+            &copy;HW/JM
+        </p>
+    </div>
   </body>
 </html>
